--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/icomoon/style.css">
+		<!-- <link rel="stylesheet" href="css/icomoon/style.css"> -->
 		<link rel="stylesheet" href="css/pink.css" class="colors">
 		<link rel="shortcut icon" href="img/pink.jpg" sizes="32x32" type="image/png"/>
 		<link rel="apple-touch-icon-precomposed" href="img/ico/60.png" type="image/png"/>
