create preview campaigns

--- a/src/campaign.html
+++ b/src/campaign.html
@@ -17,10 +17,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <!-- <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.9.1/venobox.min.css" integrity="sha512-e+0yqAgUQFoRrJ4pZigQXpOE0S7J9IGwmgH801h4H5ODqOCG8/GRfXHQ+9ab754NL79O7wDwdjwY3CcU8sEANg==" crossorigin="anonymous" />
-  <!-- <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -142,12 +140,12 @@
                 <div id="logged" style="display: none;">
                   <h3><span id="username"></span> you can help us reach the goal!</h3>
                   <h3>
-                    <a class="outline-btn outline-blue big-btn" onclick="addDonation(10)" type="button">+10!</a>
-                    <a class="outline-btn outline-purple big-btn" onclick="addDonation(25)" type="button">+25!</a>
-                    <a class="outline-btn big-btn" onclick="addDonation(50)" type="button">+50!</a>
+                    <a class="outline-btn outline-blue big-btn" onclick="addDonation(15)" type="button">+15!</a>
+                    <a class="outline-btn outline-purple big-btn" onclick="addDonation(50)" type="button">+50!</a>
+                    <a class="outline-btn big-btn" onclick="addDonation(100)" type="button">+100!</a>
                   </h3>
                   <form class="form-inline justify-content-center">
-                    <input type="text" class="form-control mr-sm-2 w-50 big-input" placeholder="How much will you donate" value="5" aria-label="donation-amount" id="donation-input" aria-describedby="basic-addon2">
+                    <input type="text" class="form-control mr-sm-2 w-50 big-input" placeholder="How much will you donate?" aria-label="donation-amount" id="donation-input" aria-describedby="basic-addon2">
                       <a class="outline-btn big-btn" onclick="donate()" type="button">Donate!</a>
                   </form>
                 </div>
@@ -169,7 +167,7 @@
           <h3 class="text-center">This campaign will be a success thanks to...</h3>
         </div>
 
-       <div id="donnors" class="text-center">
+       <div id="donors" class="text-center">
         
        </div>
 
@@ -185,7 +183,7 @@
           <div class="col-lg-12 footer-info">
             <img src="assets/img/logo.png" alt="AlmostThere">
             <p>Do you want to crowdfound a project of your own? With <a href="/almost-there-landing-page">Almost There</a> it's as easy as it gets. Create your own campaign and start planning. You're Almost There!</p>
-            <p>Almost There, created by lunafromthemoon. Powered by SIA and Near.</p>
+            <p>Almost There, created by lunafromthemoon. Powered by <a href="https://siasky.net/">SIA</a> and <a href="https://near.org/">Near</a>.</p>
           </div>
         </div>
       </div>
