--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,7 @@
               <h2>All ready!</h2>
               <a class="outline-btn big-btn" onclick="previewCampaign()" id="preview-btn" type="button">Check the preview</i></a>
               <a class="outline-btn big-btn" onclick="publishCampaign()" id="publish-btn" style="display: none" type="button">Publish!</i></a>
+              <a class="outline-btn big-btn" id="open-btn" style="display: none" target="_blank">Check it out!</i></a>
             </div>
           </div>
         </div>
